# agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HEARTBEAT.md  LICENSE  Makefile  README.md  agent.yaml.example  docker-compose.yml  install.sh  pyproject.toml  soul.md
.github/workflows/: ci.yml  docker.yml  release.yml
dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/hooks/: useAgentStatus.ts  useApi.ts  useChatSocket.ts  useEventStream.ts
dashboard/src/lib/: api.ts  types.ts  utils.ts
dashboard/src/pages/: AuditPage.tsx  ChatPage.tsx  ConversationsPage.tsx  CostsPage.tsx  LoginPage.tsx  MemoryPage.tsx  OverviewPage.tsx  SettingsPage.tsx  SkillsPage.tsx  SoulEditorPage.tsx  TasksPage.tsx  TimelinePage.tsx  ToolsPage.tsx  WorkspacesPage.tsx
docs/: api.md  configuration.md  dashboard.md  deployment.md  index.md  memory.md  migration.md  orchestration.md  quickstart.md  security.md  skills.md  telegram.md  tools.md  troubleshooting.md  workspaces.md
scripts/: fix_editable_install.py
skills/: README.md
skills/code-reviewer/: SKILL.md  main.py
skills/daily-digest/: SKILL.md  main.py
skills/github-monitor/: SKILL.md  main.py
skills/quick-notes/: SKILL.md  main.py
src/agent/: __init__.py  __main__.py  cli.py  config.py
src/agent/channels/: __init__.py  base.py  telegram.py  webchat.py
src/agent/cli/: __init__.py  _helpers.py  memory_workspace.py  skills.py  teams_projects.py  voice_daemon.py
teams/: ROSTER.md  content.yaml  data.yaml  design.yaml  engineering.yaml  product.yaml  quality.yaml  research.yaml
teams/internal/: project_planner.yaml  prompt_builder.yaml  requirements_gatherer.yaml
teams/projects/: bug_fix.yaml  build_app.yaml  build_platform.yaml  build_saas.yaml  code_review.yaml  data_pipeline.yaml  full_feature.yaml  launch_prep.yaml  mobile_app.yaml  quick_task.yaml  refactor.yaml
tests/: conftest.py  test_accessibility.py  test_agent_delegation.py  test_agent_loop.py  test_agent_loop_tools.py  test_audit.py  test_audit_sqlite.py  test_base_channel.py  test_browser_tools.py  test_builtin_tools.py  test_claude_sdk.py  test_config.py  test_consult_agent.py  test_context_assembly.py  test_context_manager.py  test_controller.py  test_cost_tracker.py  test_daemon.py  test_database.py  test_decay.py  test_delegation.py  test_desktop_apps.py  test_desktop_capabilities.py  test_desktop_errors.py  test_desktop_keyboard.py  test_desktop_mouse.py  test_desktop_platform.py  test_desktop_screen.py  test_desktop_vision.py  test_discussion_rounds.py  test_doctor.py  test_element_interaction.py  test_email_tool.py  test_embeddings.py  test_events.py  test_extraction.py  test_fact_store.py  test_filesystem_access.py  test_gateway.py  test_github_tool.py  (+63 more)
tests/integration/: conftest.py  test_memory_pipeline.py  test_session_lifecycle.py
workspaces/default/: config.yaml  soul.md
(+175 files in other folders)
